<resources>
    <string name="app_name">MyDemoforPractical</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Demo Notification</string>
    <string name="default_notification_channel_description">Notification for Demo purpose  with oreo+</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="registration">MainActivity</string>
    <string name="textview">TextView</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="cdtails">Country Details</string>
    <string name="addcountry">Add Country</string>
    <string name="Country">Add New Country</string>
    <string name="Codetwo">Action Code2</string>
    <string name="Codethree">Action Code3</string>
    <string name="add">ADD</string>
    <string name="flag">Add Country Flag</string>
    <string name="true_false">True</string>
    <string name="false_true">False</string>
    <string name="denied_permission">You denied the permission to access SD Card.</string>
    <string name="search" />

</resources>
